# program

./: CMakeLists.txt  Cliente.c  Login.c  ambientais.c  ambientais.h  cliente.h  funcionarios.c  funcionarios.h  menu.c  relatorios.c  relatorios.h
ucrt64/lib/: tkConfig.sh
ucrt64/lib/girepository-1.0/: GLib-2.0.typelib  Gdk-3.0.typelib  Gdk-4.0.typelib  GdkWin32-4.0.typelib  Gio-2.0.typelib  Gsk-4.0.typelib  Gtk-3.0.typelib  Gtk-4.0.typelib  HarfBuzz-0.0.typelib  Pango-1.0.typelib
ucrt64/lib/itcl4.2.3/: itclConfig.sh
ucrt64/lib/pkgconfig/: Lerc.pc  atk.pc  cairo-dwrite-font.pc  cairo-fc.pc  cairo-ft.pc  cairo-gobject.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-script-interpreter.pc  cairo-script.pc  cairo-svg.pc  cairo-tee.pc  cairo-win32-font.pc  cairo-win32.pc  cairo.pc  datrie-0.2.pc  epoxy.pc  expat.pc  fontconfig.pc  freetype2.pc  fribidi.pc  gail-3.0.pc  gdk-broadway-3.0.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  gio-windows-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  graphene-1.0.pc  graphene-gobject-1.0.pc  graphite2.pc  gthread-2.0.pc  gtk+-broadway-3.0.pc  gtk4-win32.pc  gtk4.pc  harfbuzz-gobject.pc  (+38 more)
ucrt64/lib/python3.11/: _sysconfigdata__win32_.py
ucrt64/lib/tdbc1.1.5/: tdbcConfig.sh
ucrt64/share/gir-1.0/: PangoFc-1.0.gir  Rsvg-2.0.gir
ucrt64/share/metainfo/: org.gtk.Demo4.appdata.xml  org.gtk.IconBrowser4.appdata.xml  org.gtk.WidgetFactory4.appdata.xml  org.gtk.gtk4.NodeEditor.appdata.xml
ucrt64/share/pkgconfig/: adwaita-icon-theme.pc  shared-mime-info.pc
(+146 files in other folders)
